fixed dark mode when you click on issue

--- a/accessibility-checker-extension/src/ts/devtools/components/reportTreeGrid.scss
+++ b/accessibility-checker-extension/src/ts/devtools/components/reportTreeGrid.scss
@@ -47,7 +47,7 @@
     .gridBody.selectedNode {
         > div { // column
             > div {
-                background-color: var(--selected-node-background);
+                // background-color: var(--selected-node-background); // JCH remove for Dark Mode
                 border-top: solid var(--selected-node-border-color) var(--border-width);
                 border-bottom: solid var(--selected-node-border-color) var(--border-width);
             }
